--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,4 +24,9 @@ services:
         condition: service_healthy
     ports:
       - "8000:8000"
-    command: ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+    command:
+      [
+        "sh",
+        "-c",
+        "alembic upgrade head && PGPASSWORD=$DB_PASSWORD psql -h $DB_HOST -U $DB_USER -d $DB_NAME -f seed.sql && uvicorn src.main:app --host 0.0.0.0 --port 8000",
+      ]
